[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/GuiVisibilityHidden.svg" type="Texture" id=1]
[ext_resource path="res://assets/GuiVisibilityVisible.svg" type="Texture" id=2]
[ext_resource path="res://scenes/KeePassImport.gd" type="Script" id=3]
[ext_resource path="res://scenes/ModulatedTextureButton.gd" type="Script" id=13]

[node name="KeePassImport" type="WindowDialog"]
margin_left = 9.0
margin_top = 9.0
margin_right = 556.0
margin_bottom = 201.0
window_title = "Import KeePass Database"
script = ExtResource( 3 )

[node name="M" type="MarginContainer" parent="."]
margin_right = 545.0
margin_bottom = 390.0
custom_constants/margin_right = 9
custom_constants/margin_top = 9
custom_constants/margin_left = 9
custom_constants/margin_bottom = 9

[node name="VB" type="VBoxContainer" parent="M"]
margin_left = 9.0
margin_top = 9.0
margin_right = 536.0
margin_bottom = 381.0
custom_constants/separation = 10

[node name="Path" type="Label" parent="M/VB"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 527.0
margin_bottom = 20.0
text = "file-path.kdbx"

[node name="HB2" type="HBoxContainer" parent="M/VB"]
margin_top = 30.0
margin_right = 527.0
margin_bottom = 58.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="M/VB/HB2"]
margin_top = 4.0
margin_right = 68.0
margin_bottom = 24.0
text = "Password:"

[node name="C1" type="CenterContainer" parent="M/VB/HB2"]
margin_left = 78.0
margin_right = 94.0
margin_bottom = 28.0

[node name="Show" type="TextureButton" parent="M/VB/HB2/C1"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
texture_normal = ExtResource( 1 )
script = ExtResource( 13 )

[node name="Hide" type="TextureButton" parent="M/VB/HB2/C1"]
visible = false
margin_top = 6.0
margin_right = 16.0
margin_bottom = 22.0
texture_normal = ExtResource( 2 )
script = ExtResource( 13 )

[node name="Password" type="LineEdit" parent="M/VB/HB2"]
margin_left = 104.0
margin_right = 473.0
margin_bottom = 28.0
size_flags_horizontal = 3
secret = true

[node name="Start" type="Button" parent="M/VB/HB2"]
margin_left = 483.0
margin_right = 527.0
margin_bottom = 28.0
text = "Start"

[node name="ProgressBar" type="ProgressBar" parent="M/VB"]
margin_top = 68.0
margin_right = 527.0
margin_bottom = 88.0
step = 1.0

[node name="Message" type="Label" parent="M/VB"]
margin_top = 98.0
margin_right = 527.0
margin_bottom = 118.0
text = "Message"

[node name="Cancel" type="Button" parent="M/VB"]
margin_top = 128.0
margin_right = 527.0
margin_bottom = 156.0
text = "Cancel"

[connection signal="pressed" from="M/VB/HB2/C1/Show" to="." method="_on_Show_pressed"]
[connection signal="pressed" from="M/VB/HB2/C1/Hide" to="." method="_on_Hide_pressed"]
[connection signal="pressed" from="M/VB/HB2/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="M/VB/Cancel" to="." method="_on_Cancel_pressed"]
